argocd-nginx-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-nginx-test
  namespace: argocd-nginx-test
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: argocd-nginx-test
    spec:
      containers:
        - ports:
            - containerPort: 80
          resources:
            limits:
              memory: 64Mi
              cpu: 50m
            requests:
              memory: 32Mi
              cpu: 25m
          name: argocd-nginx-test
          image: nginx:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          volumeMounts:
            - name: argocd-nginx-test
              mountPath: /usr/share/nginx/html/teste.html
              subPath: teste.html
      volumes:
        - name: argocd-nginx-test
          configMap:
            name: argocd-nginx-test
  selector:
    matchLabels:
      app: argocd-nginx-test
