argocd-nginx-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-nginx-test
  namespace: argocd-nginx-test
  labels:
    name: argocd-nginx-test
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-nginx-test.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-nginx-test
            port: 
              number: 80
